# giving

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  guide.rst  index.rst  integrations.rst  intro.rst  ref-api.rst  ref-core.rst  ref-gvn.rst  ref-gvr.rst  ref-obs.rst  ref-operators.rst  ref-utils.rst  reference.rst  requirements.txt
docs/reference/: obs.rst  operators.rst  utils.rst
examples/: live_bisect.py
examples/live_bisect/: README.md  main.py  requirements.txt
examples/mnist/: README.md  main.py  requirements.txt
give/: __init__.py  core.py  executors.py  obs.py  operators.py
giving/: __init__.py  api.py  core.py  executors.py  extraops.py  gvn.py  gvr.py  obs.py  operators.py  utils.py
tests/: test_executors.py  test_give.py  test_heisenbug.py  test_obs.py  test_operators.py
