[tool.poetry]
name = "give"
version = "0.0.0"
description = "Reactive logging"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Rx = "^3.2.0"
varname = "^0.7.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = "give"
known_third_party = ""
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
